--- a/scss/components/_page.scss
+++ b/scss/components/_page.scss
@@ -8,6 +8,7 @@
   left: 0;
   width: 100%;
   opacity: 0;
+  visibility: hidden;
   transition: all #{$delay} ease 0s;
 
   &__inner {
@@ -48,6 +49,7 @@
 
   &.js-active {
     opacity: 1;
+    visibility: visible;
 
     .page {
       &__left,
